--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,14 @@ dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
     testImplementation 'com.google.code.gson:gson:2.8.6'
-    testImplementation 'org.projectlombok:lombok:1.18.22'
     testImplementation 'com.github.javafaker:javafaker:1.0.1'
     testImplementation 'com.codeborne:selenide:5.19.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
 }
 
